--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "gatsby": "^2.18.12",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.4.4",
+    "gatsby-remark-images": "^3.1.43",
+    "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-source-filesystem": "^2.1.47",
+    "gatsby-transformer-remark": "^2.6.49",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
