--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
   },
   "dependencies": {
     "gatsby": "^2.18.12",
+    "gatsby-image": "^2.3.0",
     "gatsby-plugin-google-analytics": "^2.1.34",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
-    "gatsby-plugin-sharp": "^2.4.4",
+    "gatsby-plugin-sharp": "^2.5.1",
     "gatsby-remark-images": "^3.1.43",
     "gatsby-remark-images-zoom": "^1.1.0",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^2.1.47",
     "gatsby-transformer-remark": "^2.6.49",
-    "node-sass": "^4.13.0",
+    "gatsby-transformer-sharp": "^2.4.1",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
